fixes annoying break in chatter

--- a/src/css/page.less
+++ b/src/css/page.less
@@ -55,7 +55,7 @@
   position: relative;
   text-align: center;
   margin: 0 auto 2em;
-  max-width: 1024px;
+  max-width: 940px;
 
   .share {
     display: inline-block !important;
